# cookiecutter_cpp

./: CHANGELOG.md  README.md  cookiecutter.json  cpp.code-workspace
hooks/: post_gen_project.py
{{ cookiecutter.repo_name }}/: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  TODO.md  conanfile.txt
{{ cookiecutter.repo_name }}/.github/workflows/: ci.yml
{{ cookiecutter.repo_name }}/cmake/: ClangTidy.cmake
{{ cookiecutter.repo_name }}/include/{{ cookiecutter.repo_name }}/: {{ cookiecutter.repo_name }}.h  {{ cookiecutter.repo_name }}.hpp
{{ cookiecutter.repo_name }}/src/: CMakeLists.txt  main.cpp
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/: logger.cpp  logger.h  logger.hpp
{{ cookiecutter.repo_name }}/tests/: CMakeLists.txt  test.cpp
